--- a/src/components/Topics/Header/Header.css
+++ b/src/components/Topics/Header/Header.css
@@ -1,8 +1,11 @@
+.active{
+    background-color: gray;
+}
 .header{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    box-shadow: 20px 30px 40px cornflowerblue;
+    box-shadow: 20px 30px 40px  crimson;
     background-color: crimson;
     padding-left: 140px;
     padding-right: 140px;
@@ -30,9 +33,8 @@
 
 .header a:hover{
      border-bottom: 1px solid black;
-     font-size: 16px;
      border-radius: 7px;
      color: black;
-       
+     font-weight: bold;transition: 0.5s ease-in-out
  }
  
