--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -10,8 +10,9 @@
 }
 .btn button{
     border: none;
-    padding: 2px;
+    padding: 6px;
     font-weight: bold;
+    border-radius: 5px;
 }
 .btn button:hover{
     background-color: cornflowerblue;color: white;
