--- a/src/components/Topics/Header/Header.css
+++ b/src/components/Topics/Header/Header.css
@@ -30,6 +30,7 @@
     text-align: center;
     font-size: 21px;
    font-style: italic;
+   box-shadow: 10px 20px 30px white;
 }
 
 .header a:hover{
