--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,12 +1,14 @@
 .carts{
     box-shadow: 20px 30px 40px gray;
     border-radius: 10px;
+    padding: 10px;
 }
 .carts img{
     width: 250px;
     height: 250px;
     background-color: lightslategray;
     border-radius: 10px;
+   
 }
 .btn button{
     border: none;
