--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -8,6 +8,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    cursor: crosshair;
 }
 .text img{
     width: 500px;
